Correct the z-index of Header, Search and VideoPopup

--- a/src/components/header/Header.styles.scss
+++ b/src/components/header/Header.styles.scss
@@ -6,7 +6,7 @@
   left: 0;
   width: 100%;
   height: 60px;
-  z-index: 10;
+  z-index: 7;
   padding: 0;
   display: flex;
   align-items: center;
