--- a/src/components/videoPopup/VideoPopup.styles.scss
+++ b/src/components/videoPopup/VideoPopup.styles.scss
@@ -11,7 +11,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  z-index: 5;
+  z-index: 9;
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
@@ -36,7 +36,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    z-index: 6;
+    z-index: 10;
     transform: scale(0.2);
     transition: all 0.3s;
 
