--- a/src/pages/search/Search.styles.scss
+++ b/src/pages/search/Search.styles.scss
@@ -7,7 +7,7 @@
   position: relative;
   background-color: var(--blackThree);
   padding-block: 2rem 1rem;
-  z-index: 4;
+  z-index: 8;
 
   .contentWrapper {
     position: relative;
